--- a/index.html
+++ b/index.html
@@ -259,7 +259,12 @@
   
   <svg class="overlay" id="canvas" xmlns='http://www.w3.org/2000/svg'>
 
-    <filter id='noise'><feTurbulence type='fractalNoise' baseFrequency='15' seed='0' numOctaves='3' stitchTiles='stitch'><animate id='noiseAnimate' attributeName='seed' attributeType='XML' values='10;150;10' begin='0s' dur='10s' repeatCount='indefinite'></animate></feTurbulence></filter><rect width='100%' height='100%' filter='url(#noise)' fill='white' />
+    <filter id='noise'>
+        <feTurbulence type='fractalNoise' baseFrequency='0.15' seed='0' numOctaves='3' stitchTiles='stitch'>
+            <animate id='noiseAnimate' attributeName='seed' attributeType='XML' values='10;150;10' begin='0s' dur='10s' repeatCount='indefinite'></animate>
+        </feTurbulence>
+    </filter>
+    <rect width='100%' height='100%' filter='url(#noise)' fill='white' />
   </svg>
 
   <script>
