--- a/noise_swatch.html
+++ b/noise_swatch.html
@@ -7,12 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
         .swatch {
-            min-height:100px;
+            min-height:1000px;
             width:100%;
         }  
 
         .overlay {
             width: 100%;
+            height:100%;
         }
 
     </style>
