--- a/noise_swatch.html
+++ b/noise_swatch.html
@@ -9,6 +9,7 @@
         .swatch {
             min-height:1000px;
             width:100%;
+            filter:saturate(0);
         }  
 
         .overlay {
@@ -20,7 +21,7 @@
 </head>
 <body>
     <div class="swatch">
-        <svg class="overlay" id="canvas" xmlns='http://www.w3.org/2000/svg' width='100' height='100'>
+        <svg class="overlay" id="canvas" xmlns='http://www.w3.org/2000/svg' >
 
             <filter id='noise1'>
                 <feTurbulence type='fractalNoise' baseFrequency='0.015' seed='0' numOctaves='3' stitchTiles='stitch'>
