--- a/index.html
+++ b/index.html
@@ -52,7 +52,19 @@
             border-radius: var(--bs-border-radius) !important;
         }
 
-        .overlay {
+        .noise-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%; /* Initial height */
+            z-index: 1000;
+            opacity: 0.3;
+            pointer-events: none;
+            filter:saturate(0);
+        }
+
+        .scratch-overlay {
             position: absolute;
             top: 0;
             left: 0;
@@ -244,16 +256,24 @@
       </div>
   </div>
   
-  <svg class="overlay" id="canvas" xmlns='http://www.w3.org/2000/svg'>
+  <svg class="noise-overlay" id="canvas" xmlns='http://www.w3.org/2000/svg'>
 
     <filter id='noise'>
-        <feTurbulence type='fractalNoise' baseFrequency='1' seed='0' numOctaves='3' stitchTiles='stitch'>
+        <feTurbulence type='fractalNoise' baseFrequency='0.1' seed='0' numOctaves='3' stitchTiles='stitch'>
             <animate id='noiseAnimate' attributeName='seed' attributeType='XML' values='10;150;10' begin='0s' dur='10s' repeatCount='indefinite'></animate>
         </feTurbulence>
     </filter>
     <rect width='100%' height='100%' filter='url(#noise)' fill='white' />
   </svg>
 
+  <svg class="scratch-overlay" id="canvas" xmlns='http://www.w3.org/2000/svg'></svg>
+
+  <script>
+    // Dynamically set the overlay's height to match the content's height
+    const overlay = document.querySelector('.scratch-overlay');
+    overlay.style.height = document.documentElement.scrollHeight + 'px';
+    
+  </script>
 
 
     <script>
